issue #69 image distortion bug fixed

--- a/css/style.css
+++ b/css/style.css
@@ -311,20 +311,21 @@ font-size: 20px;
 }
 .uploaded-img-container{
   height: 300px;
-  /* width: 300px; */
+  /*width: 300px;*/
   transition: transform 0.8s ease-in-out;
  }
 .uploaded-img-container:hover{
   transform:rotate(360);
  }
 .editor > .canvas > .img-box{
-  width: 100%;
-  height: 100%;
+  width: 700px;
+  height: 400px;
   padding: 0px;
   display: none;
   justify-content: center;
   align-items: center;
-  background-size: cover;
+  padding-right: 100px;
+  background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
 }
